<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/home_info_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="0"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".Home_Activity" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="33dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:longClickable="false"
                android:minLines="1"
                android:text="@string/actAdd_title"
                android:textColor="@color/default_main_title_color"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RadioGroup
            android:id="@+id/add_rbg_radioTypeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" >

            <RadioButton
                android:id="@+id/add_rb_inputType_actualPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/actAdd_actualPosition"
                android:textColor="@color/default_text_color" />

            <RadioButton
                android:id="@+id/add_rb_inputType_newPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/actAdd_newPosition"
                android:textColor="@color/default_text_color" />

            <RadioButton
                android:id="@+id/add_rb_inputType_newPosition_OnMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/actAdd_newPosition_OnMap"
                android:textColor="@color/default_text_color"
                android:visibility="gone" />
        </RadioGroup>

        <!-- Layout becomes visible if "add_rb_inputType_actualPosition" selected -->

        <LinearLayout
            android:id="@+id/add_ll_inputPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/add_te_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="@color/position_info_colo" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <RadioGroup
                    android:id="@+id/add_rbg_radioLatNS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/add_rb_North"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actAdd_rbNorth"
                        android:textColor="@color/default_text_color" />

                    <RadioButton
                        android:id="@+id/add_rb_South"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actAdd_rbSouth"
                        android:textColor="@color/default_text_color" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/add_te_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textColor="@color/position_info_colo" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/add_rbg_radioLonEW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/add_rb_East"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actAdd_rbEast"
                        android:textColor="@color/default_text_color" />

                    <RadioButton
                        android:id="@+id/add_rb_West"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actAdd_rbWest"
                        android:textColor="@color/default_text_color" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <!-- Dispay the STAR and the NAME as well as the BUTTONS -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp" >

            <TextView
                android:id="@+id/add_imgbt_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/star"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:text="@string/actAdd_btfav"
                android:textColor="@color/default_text_color" />
        </LinearLayout>

        <TextView
            android:id="@+id/add_tv_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="35dp"
            android:minLines="1"
            android:text="@string/actAdd_newName"
            android:textColor="@color/default_text_color" />

        <EditText
            android:id="@+id/add_et_positionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:inputType="text"
            android:maxLength="50"
            android:textColor="@color/default_section_color" />

        <!-- Layout becomes visible if "add_rb_inputType_newPosition_OnMap" selected -->

        <LinearLayout
            android:id="@+id/add_ll_newPosition_OnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_bt_findOnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/map_color"
                android:paddingBottom="30dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="30dp"
                android:text="@string/add_bt_findOnMap"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_menu_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/add_ll_save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/default_separation_line_color" />

                <Button
                    android:id="@+id/bt_add_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/default_background_color"
                    android:drawableLeft="@drawable/validate"
                    android:paddingBottom="20dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="20dp"
                    android:text="@string/actAdd_btSave"
                    android:textColor="@color/default_section_color"
                    android:visibility="visible"/>
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_ll_delete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/default_separation_line_color" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/bt_add_delete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/default_background_color"
                        android:drawableLeft="@drawable/rmv"
                        android:paddingBottom="20dp"
                        android:paddingLeft="40dp"
                        android:paddingRight="40dp"
                        android:paddingTop="20dp"
                        android:text="@string/actAdd_btDelete"
                        android:textColor="@color/default_section_color" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/default_separation_line_color" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bt_add_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/default_background_color"
                    android:drawableLeft="@drawable/menu"
                    android:paddingBottom="20dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="20dp"
                    android:text="@string/actAdd_btCancel"
                    android:textColor="@color/default_section_color" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>