<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/alarm_graph_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/default_background_color"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/home_info_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/alarm_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="33dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:longClickable="false"
                android:minLines="1"
                android:shadowColor="@color/main_title_shadow"
                android:text="@string/app_name"
                android:textColor="@color/default_main_title_color"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="0dp"
                android:text="@string/alarm_DestinationPosition"
                android:textColor="@color/default_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alarm_destPos_Lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/position_info_colo"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alarm_destPos_Lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/position_info_colo"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/alarm_LastPosition"
                android:textColor="@color/default_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alarm_lastPos_Lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/position_info_colo"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alarm_lastPos_Lon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/position_info_colo"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/alarm_Rayon"
                android:textColor="@color/default_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alarm_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/position_info_colo"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/alarm_DistanceAlarm"
                android:textColor="@color/default_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alarm_distAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/position_info_colo"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/alarm_DistanceDest"
                android:textColor="@color/default_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alarm_distDest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/position_info_colo"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_Buttons_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/default_separation_line_color" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/alarm_bt_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/default_background_color"
                    android:drawableLeft="@drawable/menu"
                    android:paddingBottom="20dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="20dp"
                    android:text="@string/actAlarm_back"
                    android:textColor="@color/default_section_color" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/default_separation_line_color" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/alarm_bt_stopAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/default_background_color"
                    android:drawableLeft="@drawable/rmv"
                    android:paddingBottom="20dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="20dp"
                    android:text="@string/actAlarm_stopAlarm"
                    android:textColor="@color/default_section_color" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>